--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,27 @@
-.App {
+*{
+  margin: 0;
+  scroll-behavior: smooth;
+}
+/* chrome, Safari, Eddge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button{
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.greenColor {
+  color: green !important;
+}
+.redColor {
+  color: red !important;
+}
+/* Firefox */
+/* input[type="number"] {
+  -moz-appearance: textfield;
+} */
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +58,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
